# Mandol_ws

./: README.md
arduino/: dolbatt_arduino.ino
arduino/MANDO_FINAL/: MANDO_FINAL.ino
arduino/MANDO_FINAL_DYNAMIC_TH/: MANDO_FINAL_DYNAMIC_TH.ino
arduino/MANDO_FINAL_DYNAMIC_TH_SECOND/: MANDO_FINAL_DYNAMIC_TH_SECOND.ino
arduino/MANDO_FINAL_FIXED_TH/: MANDO_FINAL_FIXED_TH.ino
arduino/MANDO_FINAL_NO_MANUAL/: MANDO_FINAL_NO_MANUAL.ino
data/preprocessed/: 오른쪽 차선.csv  왼쪽 차선.csv  이전대회 GPS 데이터 (기본).csv  이전대회 GPS 데이터 (평행주차).csv
data/processed/: 1_T_right_P_right.csv  1_T_right_P_right_startR.csv  2_T_right_P_left.csv  2_T_right_P_left_startR.csv  3_T_left_P_right _startR.csv  3_T_left_P_right.csv  4_T_left_P_left_startR.csv  5_pass.csv  5_pass_startR.csv  Straight_S_1.csv  T_parallel_2.csv  T_parallel_3.csv  T_parallel_4.csv  csv_reverse.py  interpolate_csv.py  visualize_all_csv.py  visualize_csv.py  yellowbox_left.csv  yellowbox_right.csv  보간 후.csv  오른쪽 차선 utm.csv  왼쪽 차선 utm.csv
rosbag/gps_bag_9_10/300_bag_15hz/: metadata.yaml
rosbag/gps_bag_9_10/300_bag_8hz/: metadata.yaml
rosbag/gps_bag_9_10/70_bag_8hz/: metadata.yaml
rosbag/gps_bag_9_10/90_bag_15hz/: metadata.yaml
rosbag/gps_bag_9_16/Straight-S_bag/: metadata.yaml
rosbag/gps_bag_9_16/T_parallel_1/: metadata.yaml  rosbag2_2025_09_16-10_57_27_0.db3
rosbag/gps_bag_9_16/T_parallel_2/: metadata.yaml
rosbag/gps_bag_9_16/T_parallel_3/: metadata.yaml
rosbag/gps_bag_9_16/T_parallel_4/: metadata.yaml
rosbag/gps_bag_9_20/rosbag2_2025_09_20-15_57_24/: metadata.yaml
rosbag/gps_bag_9_4/100_bag/: metadata.yaml
rosbag/gps_bag_9_4/300_bag/: metadata.yaml
rosbag/gps_bag_9_4/70_bag/: metadata.yaml  rosbag2_2025_09_04-19_21_11_0.db3
src/RTK_GPS_NTRIP/ntrip_client/launch/: ntrip_client_launch.py
src/RTK_GPS_NTRIP/ublox_gps/config/: zed_f9p.yaml  zed_f9r.yaml
src/RTK_GPS_NTRIP/ublox_gps/launch/: ublox_dual_gps_launch.py  ublox_f9p_launch.py  ublox_f9r_launch.py
src/gps_to_utm/: CMakeLists.txt  Readme.md  package.xml
src/gps_to_utm/config/: tf_gps_csv.yaml
src/gps_to_utm/include/gps_to_utm/: utm_converter.hpp
src/gps_to_utm/launch/: tf.rviz  tf_gps_csv.launch.py  total.launch.py
src/gps_to_utm/src/: azimuth_angle_calculator.cpp  f9p_to_csv.py.txt  f9p_to_utm.cpp  f9r_to_csv.py  f9r_to_utm.cpp  tf_gps_csv.cpp
src/mando_vision/: package.xml  requirements.txt  setup.cfg  setup.py
src/mando_vision/mando_vision/: vision_node.py
src/mando_vision/mando_vision/utils/: export_onnx.py  h264_converter.py  unified_recorder.py
src/mission_supervisor/: GEMINI.md  package.xml  setup.cfg  setup.py
src/mission_supervisor/mission_supervisor/: mission_supervisor.py
src/path_planning/: CMakeLists.txt  Readme.md  package.xml
src/path_planning/config/: csv_detector.yaml  f9r_roi_path.yaml  pure_pursuit.yaml
src/path_planning/include/path_planning/: gpu_roi.hpp
src/path_planning/launch/: csv_detector.launch.py  f9r_roi_path.launch.py  pure_pursuit.launch.py
src/path_planning/scripts/: velocity_gps.py
src/path_planning/src/: csv_radius_detector.cpp  f9p_roi_path.cpp.txt  f9r_roi_path.cpp  f9r_roi_path.cpp_front_back.txt  pure_pursuit.cpp
src/serial_bridge/: package.xml  setup.py
src/serial_bridge/serial_bridge/: Mandol_ws.code-workspace  serial_bridge.py
src/usb_cam/: CMakeLists.txt
src/usb_cam/config/: params_1.yaml  params_2.yaml  params_3.yaml
src/usb_cam/src/: usb_cam_node.cpp
